--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -18,3 +18,14 @@ font-family: 'PT Serif', serif;
 body {
   background-color: #f1f2f2;
 }
+
+.short-description {
+  max-height: 5rem;
+  overflow: hidden;
+}
+
+.full-description {
+  max-height: none;
+  overflow: visible;
+}
+/* mt-1 text-sm text-gray-700 */
